Fixed MAGETWO-9652: [Piece of Cake] Numbers are not clearly visible in QTY field on shopping cart page [IE8]

--- a/app/design/frontend/magento2/electron/css/styles.less
+++ b/app/design/frontend/magento2/electron/css/styles.less
@@ -1901,7 +1901,7 @@ select {
         }
     }
     th.col.qty { text-transform: uppercase; }
-    input.qty {width:40px; text-align: center}
+    input.qty { line-height: 1; text-align: center; width:40px; }
     td.col.price,
     td.col.subtotal {
         color: #c0cad5;
